<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminChatActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="Return to previous screen"
        android:cropToPadding="false"
        app:backgroundTint="?attr/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert"
        app:useCompatPadding="true" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="0dp"
        android:theme="@style/Base.Theme.PantryPal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Base.Theme.PantryPal"
        app:title="Admin Chat"
        app:titleMarginStart="220dp"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
        app:titleTextColor="#FFFFFF" />

    <Button
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|left"
        android:layout_marginTop="8dp"
        android:background="?android:attr/windowBackground"
        android:text="Back"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Send_chat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="3dp"
        android:text="Send Chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/message_text"
        android:layout_width="0dp"
        android:layout_height="150px"
        android:ems="10"
        android:hint="Enter Message Here"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Send_chat_button"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/chat_display"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="-80dp"
        android:gravity="bottom"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="vertical"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/message_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


</androidx.constraintlayout.widget.ConstraintLayout>