...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/i_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="1mm"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="Delete"
...
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="1mm"
                    android:text="Edit" />

                <Button
                    android:id="@+id/i_information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="1mm"
                    android:layout_weight="1"
                    android:text="Info" />
            </LinearLayout>
...
