...
        app:title="Add Ingredient"
        app:titleMarginStart="190dp"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
        app:titleTextColor="#FFFFFF" />

    <Button
        android:id="@+id/add_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="275dp"
        android:text="Add Ingredient"
...
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/add_ingredient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_iname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
...
